# spotify-market-popularity

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
data/: PCA_df_no_genre.csv  chosic_genres.csv  cluster_df.csv  cluster_df_w_genres.csv  spotify_artists.json  spotify_audio_features.json
data/test_data/: nmf_artists.json  nmf_audio_features.json  nmf_playlist.json
functions/: feature_engineering.py  plot_functions.py  spotify_api.py
src/: Supervised_Models_Final.ipynb  scrape_genres.ipynb
src/proto/: Supervised Learning Final.ipynb  Supervised Learning.ipynb  Unsupervised_Models.ipynb  data_pull.ipynb  dev_feature_eng.ipynb  eda_visuals.ipynb
src/scripts/: Supervised_Models_Final.ipynb  create_spotify_data.py  scrape_test_data.ipynb
