[tool.poetry]
name = "spotify-market-popularity"
version = "0.1.0"
description = ""
authors = ["Matt Bolanos <matthew.a.bolanos@gmail.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.packages]]
include = "functions"

[[tool.poetry.packages]]
include = "data"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
pre-commit = "^3.4.0"
python-dotenv = "^1.0.0"
ipykernel = "^6.25.2"
selenium = "^4.12.0"
black = "^23.9.1"
requests = "^2.31.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
k-means-constrained = "^0.7.3"
gower = "^0.1.2"
scipy = "^1.11.3"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
